# MyApps

./: build.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/shaders/: frag.glsl  vertex.glsl
app/src/main/cpp/: CMakeLists.txt  myapps.cpp
app/src/main/cpp/basic/: CMakeLists.txt  myapps.cpp
app/src/main/cpp/myengine/: CMakeLists.txt  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h
app/src/main/cpp/myengine/graphical/: GraphicalBackend.cpp  GraphicalBackend.h
app/src/main/cpp/myengine/loader/: ModelLoader.cpp  ModelLoader.h  SceneLoader.cpp  SceneLoader.h
app/src/main/cpp/myengine/types/: Index.h  Model.h  Object.h  Scene.h  Screen.h  Texture.h  TextureBitmap.h  TextureType.h  Transformation.h  Vertex.h
app/src/main/cpp/myengine/types/control/: Control.cpp  Control.h
app/src/main/cpp/myengine/types/observer/: Camera.cpp  Camera.h  Observer.cpp  Observer.h
app/src/main/cpp/myengine/types/shader/: ShaderAttributeContainer.h  ShaderAttributeContext.h  ShaderAttributeHolder.h  ShaderAttributeReference.h  ShaderInterface.h  ShaderUniformHolder.h  ShaderUniformReference.h  ShaderUniformType.h
app/src/main/cpp/myengine/utils/: AssetLoader.cpp  AssetLoader.h  LimitedQueue.cpp  LimitedQueue.h  TimeUtil.cpp  TimeUtil.h  Utility.cpp
app/src/main/cpp/waves/: AudioEngine.cpp  AudioEngine.h  CMakeLists.txt  Oscillator.cpp  Oscillator.h  jni-bridge.cpp  touchArea.h
app/src/main/cpp/waves/api/: AudioEngine.h  Oscillator.h
app/src/main/res/drawable/: pen_solid.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+41 files in other folders)
